--- a/index.html
+++ b/index.html
@@ -597,14 +597,14 @@
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
                                     aria-controls="panelsStayOpen-collapseThree">
-                                What do you mean by CSS box model?
+                                Wwhat is semantic tag?
                                 </button>
                             </h2>
                             <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
                                 aria-labelledby="panelsStayOpen-headingThree">
                                 <div class="accordion-body">
-                                    In CSS, the term "box model" is used when talking about design and layout. The CSS box model is essentially a box that
-                                    wraps around every HTML element. It consists of: margins, borders, padding, and the actual content.
+                                The HTML semantics refers to the tags that provide meaning to an HTML page rather than just presentation. It makes HTML
+                                more comprehensible by better defining the different sections and layout of web pages.
 
                                 </div>
                             </div>
